src/snapshots/raoul__tests__parse_ast_is_ok@merge-sort.ra.snap
---
source: src/tests.rs
expression: quad_manager
input_file: src/examples/valid/merge-sort.ra
---
0    - Goto       -     -     99
1    - Assignment 3000  -     1000
2    - Minus      22    3001  2000
3    - Lte        1000  2000  2750
4    - GotoF      2750  -     11
5    - Ver        1000  3002  -
6    - Sum        3000  1000  4000
7    - Print      4000  -     -
8    - PrintNl    -     -     -
9    - Inc        -     -     1000
10   - Goto       -     -     2
11   - EndProc    -     -     -
12   - Assignment 1000  -     1003
13   - Sum        1001  3001  2000
14   - Assignment 2000  -     1004
15   - Assignment 1000  -     1005
16   - Lte        1003  1001  2750
17   - Lte        1004  1002  2751
18   - And        2750  2751  2752
19   - GotoF      2752  -     44
20   - Ver        1003  3002  -
21   - Sum        3000  1003  4001
22   - Ver        1004  3002  -
23   - Sum        3000  1004  4002
24   - Lte        4001  4002  2752
25   - GotoF      2752  -     34
26   - Ver        1005  3002  -
27   - Sum        3002  1005  4003
28   - Ver        1003  3002  -
29   - Sum        3000  1003  4004
30   - Assignment 4004  -     4003
31   - Sum        1003  3001  2001
32   - Assignment 2001  -     1003
33   - Goto       -     -     41
34   - Ver        1005  3002  -
35   - Sum        3002  1005  4005
36   - Ver        1004  3002  -
37   - Sum        3000  1004  4006
38   - Assignment 4006  -     4005
39   - Sum        1004  3001  2001
40   - Assignment 2001  -     1004
41   - Sum        1005  3001  2001
42   - Assignment 2001  -     1005
43   - Goto       -     -     16
44   - Lte        1003  1001  2752
45   - GotoF      2752  -     56
46   - Ver        1005  3002  -
47   - Sum        3002  1005  4007
48   - Ver        1003  3002  -
49   - Sum        3000  1003  4008
50   - Assignment 4008  -     4007
51   - Sum        1005  3001  2001
52   - Assignment 2001  -     1005
53   - Sum        1003  3001  2001
54   - Assignment 2001  -     1003
55   - Goto       -     -     44
56   - Lte        1004  1002  2752
57   - GotoF      2752  -     68
58   - Ver        1005  3002  -
59   - Sum        3002  1005  4009
60   - Ver        1004  3002  -
61   - Sum        3000  1004  4010
62   - Assignment 4010  -     4009
63   - Sum        1005  3001  2001
64   - Assignment 2001  -     1005
65   - Sum        1004  3001  2001
66   - Assignment 2001  -     1004
67   - Goto       -     -     56
68   - Assignment 1000  -     1005
69   - Lte        1005  1002  2752
70   - GotoF      2752  -     78
71   - Ver        1005  3002  -
72   - Sum        3000  1005  4011
73   - Ver        1005  3002  -
74   - Sum        3002  1005  4012
75   - Assignment 4012  -     4011
76   - Inc        -     -     1005
77   - Goto       -     -     69
78   - EndProc    -     -     -
79   - Lt         1000  1001  2750
80   - GotoF      2750  -     98
81   - Sum        1000  1001  2000
82   - Div        2000  3003  2001
83   - Assignment 2001  -     1002
84   - Era        6     79    -
85   - Param      1000  -     0
86   - Param      1002  -     1
87   - GoSub      79    -     -
88   - Era        6     79    -
89   - Sum        1002  3001  2001
90   - Param      2001  -     0
91   - Param      1001  -     1
92   - GoSub      79    -     -
93   - Era        11    12    -
94   - Param      1000  -     0
95   - Param      1002  -     1
96   - Param      1001  -     2
97   - GoSub      12    -     -
98   - EndProc    -     -     -
99   - Ver        3000  3002  -
100  - Sum        3000  3000  4013
101  - Assignment 3004  -     4013
102  - Ver        3001  3002  -
103  - Sum        3000  3001  4014
104  - Assignment 3001  -     4014
105  - Ver        3003  3002  -
106  - Sum        3000  3003  4015
107  - Assignment 3005  -     4015
108  - Ver        3006  3002  -
109  - Sum        3000  3006  4016
110  - Assignment 3007  -     4016
111  - Ver        3004  3002  -
112  - Sum        3000  3004  4017
113  - Assignment 3008  -     4017
114  - Ver        3005  3002  -
115  - Sum        3000  3005  4018
116  - Assignment 3009  -     4018
117  - Ver        3010  3002  -
118  - Sum        3000  3010  4019
119  - Assignment 3011  -     4019
120  - Ver        3012  3002  -
121  - Sum        3000  3012  4020
122  - Assignment 3013  -     4020
123  - Ver        3014  3002  -
124  - Sum        3000  3014  4021
125  - Assignment 3006  -     4021
126  - Ver        3015  3002  -
127  - Sum        3000  3015  4022
128  - Assignment 3000  -     4022
129  - Ver        3016  3002  -
130  - Sum        3000  3016  4023
131  - Assignment 3003  -     4023
132  - Assignment 3002  -     22
133  - Print      3500  -     -
134  - PrintNl    -     -     -
135  - Era        3     1     -
136  - GoSub      1     -     -
137  - Era        6     79    -
138  - Minus      22    3001  2000
139  - Param      3000  -     0
140  - Param      2000  -     1
141  - GoSub      79    -     -
142  - Print      3501  -     -
143  - PrintNl    -     -     -
144  - Era        3     1     -
145  - GoSub      1     -     -
146  - End        -     -     -

