src/snapshots/raoul__tests__parse_ast_is_ok@quick-sort.ra.snap
---
source: src/tests.rs
expression: quad_manager
input_file: src/examples/valid/non-plot/quick-sort.ra
---
0 - Goto       -     -     71   
1 - Assignment 3000  -     1000 
2 - Minus      11    3001  2000 
3 - Lte        1000  2000  2750 
4 - GotoF      2750  -     11   
5 - Ver        1000  3002  -    
6 - Sum        3000  1000  4000 
7 - Print      4000  -     -    
8 - PrintNl    -     -     -    
9 - Inc        -     -     1000 
10 - Goto       -     -     2    
11 - EndProc    -     -     -    
12 - Ver        1000  3002  -    
13 - Sum        3000  1000  4001 
14 - Assignment 4001  -     1002 
15 - Ver        1000  3002  -    
16 - Sum        3000  1000  4002 
17 - Ver        1001  3002  -    
18 - Sum        3000  1001  4003 
19 - Assignment 4003  -     4002 
20 - Ver        1001  3002  -    
21 - Sum        3000  1001  4004 
22 - Assignment 1002  -     4004 
23 - EndProc    -     -     -    
24 - Ver        1001  3002  -    
25 - Sum        3000  1001  4005 
26 - Assignment 4005  -     1002 
27 - Minus      1000  3001  2000 
28 - Assignment 2000  -     1003 
29 - Assignment 1000  -     1004 
30 - Lte        1004  1001  2750 
31 - GotoF      2750  -     44   
32 - Ver        1004  3002  -    
33 - Sum        3000  1004  4006 
34 - Lt         4006  1002  2750 
35 - GotoF      2750  -     42   
36 - Sum        1003  3001  2001 
37 - Assignment 2001  -     1003 
38 - Era        3     12    -    
39 - Param      1003  -     0    
40 - Param      1004  -     1    
41 - GoSub      12    -     -    
42 - Inc        -     -     1004 
43 - Goto       -     -     30   
44 - Era        3     12    -    
45 - Sum        1003  3001  2001 
46 - Param      2001  -     0    
47 - Param      1001  -     1    
48 - GoSub      12    -     -    
49 - Sum        1003  3001  2001 
50 - Return     2001  -     -    
51 - EndProc    -     -     -    
52 - Lt         1000  1001  2750 
53 - GotoF      2750  -     70   
54 - Era        8     24    -    
55 - Param      1000  -     0    
56 - Param      1001  -     1    
57 - GoSub      24    -     -    
58 - Assignment 12    -     2000 
59 - Assignment 2000  -     1002 
60 - Era        5     52    -    
61 - Minus      1002  3001  2001 
62 - Param      1000  -     0    
63 - Param      2001  -     1    
64 - GoSub      52    -     -    
65 - Era        6     52    -    
66 - Sum        1002  3001  2001 
67 - Param      2001  -     0    
68 - Param      1001  -     1    
69 - GoSub      52    -     -    
70 - EndProc    -     -     -    
71 - Ver        3000  3002  -    
72 - Sum        3000  3000  4007 
73 - Assignment 3003  -     4007 
74 - Ver        3001  3002  -    
75 - Sum        3000  3001  4008 
76 - Assignment 3001  -     4008 
77 - Ver        3004  3002  -    
78 - Sum        3000  3004  4009 
79 - Assignment 3005  -     4009 
80 - Ver        3006  3002  -    
81 - Sum        3000  3006  4010 
82 - Assignment 3007  -     4010 
83 - Ver        3003  3002  -    
84 - Sum        3000  3003  4011 
85 - Assignment 3008  -     4011 
86 - Ver        3005  3002  -    
87 - Sum        3000  3005  4012 
88 - Assignment 3009  -     4012 
89 - Ver        3010  3002  -    
90 - Sum        3000  3010  4013 
91 - Assignment 3011  -     4013 
92 - Ver        3012  3002  -    
93 - Sum        3000  3012  4014 
94 - Assignment 3013  -     4014 
95 - Ver        3014  3002  -    
96 - Sum        3000  3014  4015 
97 - Assignment 3006  -     4015 
98 - Ver        3015  3002  -    
99 - Sum        3000  3015  4016 
100 - Assignment 3000  -     4016 
101 - Ver        3016  3002  -    
102 - Sum        3000  3016  4017 
103 - Assignment 3004  -     4017 
104 - Assignment 3002  -     11   
105 - Print      3500  -     -    
106 - PrintNl    -     -     -    
107 - Era        3     1     -    
108 - GoSub      1     -     -    
109 - Era        6     52    -    
110 - Minus      11    3001  2000 
111 - Param      3000  -     0    
112 - Param      2000  -     1    
113 - GoSub      52    -     -    
114 - Print      3501  -     -    
115 - PrintNl    -     -     -    
116 - Era        3     1     -    
117 - GoSub      1     -     -    
118 - End        -     -     -    

