src/snapshots/raoul__tests__parse_ast_is_ok@read.ra.snap
---
source: src/tests.rs
expression: quad_manager
input_file: src/examples/valid/read.ra
---
0    - Goto       -     -     1
1    - Read       -     -     2500
2    - Assignment 2500  -     1500
3    - Print      1500  -     -
4    - PrintNl    -     -     -
5    - End        -     -     -

