src/snapshots/raoul__tests__parse_ast_is_ok@unitialized-element.ra.snap
---
source: src/tests.rs
expression: quad_manager
input_file: src/examples/invalid/dynamic/unitialized-element.ra
---
0    - Goto       -     -     1
1    - Ver        3001  3002  -
2    - Sum        3000  3001  4000
3    - Print      4000  -     -
4    - PrintNl    -     -     -
5    - End        -     -     -

