src/snapshots/raoul__tests__parse_ast_is_ok@used-before.ra.snap
---
source: src/tests.rs
expression: quad_manager
input_file: src/examples/invalid/dynamic/used-before.ra
---
0 - Goto       -     -     1    
1 - Print      1500  -     -    
2 - PrintNl    -     -     -    
3 - Assignment 3500  -     1500 
4 - End        -     -     -    

