src/snapshots/raoul__tests__parse_ast_is_ok@while-return.ra.snap
---
source: src/tests.rs
expression: quad_manager
input_file: src/examples/valid/while-return.ra
---
0    - Goto       -     -     11
1    - Assignment 3000  -     1000
2    - Lt         1000  3001  2750
3    - GotoF      2750  -     9
4    - Print      1000  -     -
5    - PrintNl    -     -     -
6    - Sum        1000  3000  2000
7    - Assignment 2000  -     1000
8    - Goto       -     -     2
9    - Return     1000  -     -
10   - EndProc    -     -     -
11   - Era        3     1     -
12   - GoSub      1     -     -
13   - Assignment 0     -     2000
14   - Print      2000  -     -
15   - PrintNl    -     -     -
16   - End        -     -     -

